--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </section>
 <!--section banner ends here-->
 
-<!--Main content of the page with 3 articles. Each images are given an alt to provide alternative information for the images-->
+<!--Main content of the page which describe the functionality of the web site, and holds 3 articles. Each images are given an alt to provide alternative information for the images-->
 <main class="content">
     <!--Missing an id attribute to first link navigation -->
     <article id="search-engine-optimization" class="search-engine-optimization">
@@ -56,5 +56,42 @@
         <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing logo">
     </article>
 </main>
+<!--main tag ends here-->
+
+<!--Section element tag with 3 article tags and added alt to all images to provide alternative information for the images, and fixed last image tag, refer to comment for the image-->
+<section class="benefits">
+    <article class="benefit-lead">
+        <h3>Lead Generation</h3> 
+        <img src="./assets/images/lead-generation.png" alt="lead-generation logo">
+        <p>
+            Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+        </p>
+    </article>
+    <article class="benefit-brand">
+        <h3>Brand Awareness</h3>
+        <img src="./assets/images/brand-awareness.png" alt="Brand-awareness  logo"> 
+        <p>
+            Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+        </p>
+    </article>
+    <article class="benefit-cost">
+        <h3>Cost Management</h3>
+
+        <!--Image tag had an opening and a closing tag, fixed with a self closing tag-->
+        <img src="./assets/images/cost-management.png" alt="Cost-management logo">
+        <p>
+            As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+        </p>
+    </article>  
+</section>
+<!--Ends of the section tag-->
+
+<!--footer tag describes the end of the page-->
+<footer class="footer">
+    <h2>Made with ❤️️ by Horiseon</h2>
+    <p>
+        &copy; 2019 Horiseon Social Solution Services, Inc.
+    </p>
+</footer>
 </body>
 </html>
