--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <!--Replaced the div tag with a header tag element-->
-   <header class="header">
+   <header>
     <h1>Hori<span class="seo">seo</span>n</h1>
     <!--replaced the div tag element with a nav element which represents the navigation area of the page-->
     <nav>
@@ -31,12 +31,12 @@
 
     <!--Section element to hold banner-->
     <section class="hero">
-        <img src="./assets/images/digital-marketing-meeting.jpg" alt="Page banner">
+        <img src="./assets/images/digital-marketing-meeting.jpg" alt="Page banner">    
     </section>
     <!--section banner ends here-->
 
     <!--Main content of the page which describe the functionality of the web site, and holds 3 articles. Each images are given an alt to provide alternative information for the images-->
-    <main class="content">
+    <main>
         <!--Missing an id attribute to first link navigation -->
         <article id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search engine optimisation">
@@ -91,7 +91,7 @@
     <!--Ends of the section tag-->
 
     <!--footer tag describes the end of the page-->
-    <footer class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
