--- a/index.html
+++ b/index.html
@@ -62,23 +62,23 @@
     </main>
     <!--main tag ends here-->
 
-    <!--Section element tag with 3 article tags and added alt to all images to provide alternative information for the images, and fixed last image tag, refer to comment for the image-->
+    <!--Section element tag with 3 aside elements tags and added alt to all images to provide alternative information for the images, and fixed last image tag, refer to comment for the image-->
     <section class="benefits">
-        <article class="benefit-lead">
+        <aside class="benefit-lead">
             <h3>Lead Generation</h3> 
             <img src="./assets/images/lead-generation.png" alt="lead-generation logo">
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </article>
-        <article class="benefit-brand">
+        </aside>
+        <aside class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Brand-awareness  logo"> 
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </article>
-        <article class="benefit-cost">
+        </aside>
+        <aside class="benefit-cost">
             <h3>Cost Management</h3>
 
             <!--Image tag had an opening and a closing tag, fixed with a self closing tag-->
@@ -86,7 +86,7 @@
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </article>  
+        </aside>  
     </section>
     <!--Ends of the section tag-->
 
